# lpc-character-generator

./: .gitignore  LICENSE  README.md  pyproject.toml  pytest.ini
.github/workflows/: build.yml
lpc_character_generator/: __init__.py  constants.py  create.py  generate.py  generate_dress_up.py  generate_points.py
lpc_character_generator/data/: color_names.json  edge_configs.json  rotation_groups.json
lpc_character_generator/general_utilities/: __init__.py  extract_direction_points.py  extract_rotation_points.py  get_color.py  get_path_to_asset_type.py
lpc_character_generator/get_character/: __init__.py  extract_direction_frames.py  extract_frames.py  extract_rotation_frames.py  fetch_behind.py  get_asset.py  get_character.py
lpc_character_generator/get_character_description/: __init__.py  arrange_sentences.py  assemble_list_string.py  get_character_description.py  get_holdable_description.py  get_with_description.py
lpc_character_generator/get_character_points/: __init__.py  format_file_name.py  get_character_points.py  get_points.py
lpc_character_generator/get_character_skeleton_points/: __init__.py  draw_skeleton.py  get_character_skeleton_points.py
lpc_character_generator/get_characteristics/: __init__.py  get_characteristics.py  get_item_characteristics.py
lpc_character_generator/get_modifiable_character/: __init__.py  at_least_one_available.py  get_asset_args.py  get_asset_description.py  get_item_icon.py  (+3 more)
tests/: test_create.py  test_dress_up.py  test_generate.py  test_generate_non_rotations.py  test_generate_points.py  test_generate_rotations.py
(+518 files in other folders)
