[tool.poetry]
name = "lpc-character-generator"
version = "0.1.1"
description = ""
authors = ["Richard Löwenström <samedii@gmail.com>"]
readme = "README.md"
packages = [
    { include = "lpc_character_generator" }
]

[tool.poetry.dependencies]
python = "^3.9,<3.11"
pillow = "^9.0.0"
numpy = "^1.25.2"

[tool.poetry.group.dev.dependencies]
pytest = "^7.4.0"
ipykernel = "^6.25.1"
ipywidgets = "^8.1.0"
black = "^23.7.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
